--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,132 @@
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
-SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key
+# ========================================
+# POSTURE - ENVIRONMENT VARIABLES EXAMPLE
+# ========================================
+# Copy this file to .env.local and fill in your actual values
+# NEVER commit .env.local to git!
 
-# GitHub OAuth
-GITHUB_CLIENT_ID=your_github_client_id
-GITHUB_CLIENT_SECRET=your_github_client_secret
+# ========================================
+# GITHUB OAUTH
+# ========================================
+# Create a GitHub OAuth app at: https://github.com/settings/developers
+# Set callback URL to: http://localhost:3000/api/auth/github (dev)
+# or: https://your-domain.vercel.app/api/auth/github (production)
 
-# LinkedIn OAuth
-LINKEDIN_CLIENT_ID=your_linkedin_client_id
-LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret
+NEXT_PUBLIC_GITHUB_CLIENT_ID=your_github_client_id_here
+GITHUB_CLIENT_SECRET=your_github_client_secret_here
+NEXT_PUBLIC_GITHUB_REDIRECT_URI=http://localhost:3000/api/auth/github
 
-# NextAuth Secret
-NEXTAUTH_SECRET=your_nextauth_secret
-NEXTAUTH_URL=http://localhost:3000
+# ========================================
+# LINKEDIN OAUTH (Optional - if Partner Program approved)
+# ========================================
+# Apply for LinkedIn Partner Program first
+# Create app at: https://www.linkedin.com/developers/apps
 
-# AI Provider API Keys (User configurable in app)
-# These are fallback/default keys for free tier
-GROQ_API_KEY=your_groq_api_key
+LINKEDIN_CLIENT_ID=your_linkedin_client_id_here
+LINKEDIN_CLIENT_SECRET=your_linkedin_client_secret_here
+LINKEDIN_REDIRECT_URI=http://localhost:3000/api/auth/linkedin/callback
+
+# ========================================
+# SUPABASE
+# ========================================
+# Create a project at: https://supabase.com
+# Get these from: Project Settings > API
+
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_KEY=your_supabase_service_key_here
+
+# ========================================
+# ENCRYPTION
+# ========================================
+# Generate a random 32-character string for AES-256 encryption
+# Example: openssl rand -base64 32
+# This encrypts OAuth tokens and user data in the database
+
+ENCRYPTION_KEY=your_32_character_encryption_key_here_change_this
+
+# ========================================
+# AI PROVIDERS (Optional - user can provide their own)
+# ========================================
+# If not provided, app will use Groq free tier as fallback
+
+# OpenAI (Primary)
+OPENAI_API_KEY=sk-your_openai_api_key_here
+
+# Anthropic (Secondary)
+ANTHROPIC_API_KEY=sk-ant-your_anthropic_api_key_here
+
+# Google Gemini (Tertiary)
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# Groq (Free Tier Fallback - 30 req/min)
+GROQ_API_KEY=gsk_your_groq_api_key_here
+
+# ========================================
+# RATE LIMITING (Upstash Redis)
+# ========================================
+# Create free account at: https://upstash.com
+# Used for API rate limiting (20 req/min per user)
+
+UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_token_here
+
+# ========================================
+# MONITORING & ANALYTICS
+# ========================================
+
+# Sentry (Error Tracking)
+# Create project at: https://sentry.io
+NEXT_PUBLIC_SENTRY_DSN=https://your_sentry_dsn_here
+SENTRY_AUTH_TOKEN=your_sentry_auth_token_here
+
+# ========================================
+# ENVIRONMENT
+# ========================================
+
+NODE_ENV=development
+# Options: development, production, test
+
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+# Production: https://your-domain.vercel.app
+
+LOG_LEVEL=debug
+# Options: debug, info, warn, error
+
+# ========================================
+# SECURITY
+# ========================================
+
+# Session secret (generate with: openssl rand -base64 32)
+SESSION_SECRET=your_session_secret_here_change_this
+
+# CORS allowed origins (comma-separated)
+CORS_ORIGINS=http://localhost:3000,https://your-domain.vercel.app
+
+# Rate limiting
+RATE_LIMIT_WINDOW=60000
+# Window in milliseconds (60000 = 1 minute)
+
+RATE_LIMIT_MAX_REQUESTS=20
+# Max requests per window per user
+
+# ========================================
+# OPTIONAL FEATURES
+# ========================================
+
+# Enable/disable features
+NEXT_PUBLIC_ENABLE_VOICE_INPUT=true
+NEXT_PUBLIC_ENABLE_DARK_MODE=true
+NEXT_PUBLIC_ENABLE_ANALYTICS=true
+
+# LinkedIn API fallback mode (if not approved for Partner Program)
+NEXT_PUBLIC_USE_CLIPBOARD_FALLBACK=false
+# Set to true to show copy-to-clipboard instead of direct publishing
+
+# ========================================
+# NOTES
+# ========================================
+# 1. Copy this file to .env.local for local development
+# 2. NEVER commit .env or .env.local to git
+# 3. Generate strong random strings for ENCRYPTION_KEY and SESSION_SECRET
+# 4. Use minimum OAuth scopes (read:user, user:email for GitHub)
+# 5. Rotate keys regularly (every 90 days recommended)
