--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,276 @@
-# Environment variables
+# ========================================
+# SENSITIVE DATA - NEVER COMMIT
+# ========================================
+
+# Environment variables (API keys, secrets, tokens)
 .env
+.env.*
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Dependencies
+# Credentials and secrets
+credentials.json
+secrets.json
+*.pem
+*.key
+*.cert
+*.p12
+*.pfx
+service-account*.json
+firebase-adminsdk*.json
+
+# OAuth tokens and session data
+tokens/
+.tokens
+auth-tokens.json
+session-storage/
+
+# Database backups and exports (may contain user data)
+*.sql
+*.dump
+*.sqlite
+*.db
+backup/
+backups/
+db-backup/
+database-dump/
+
+# User data exports (GDPR compliance)
+user-data/
+exports/
+gdpr-exports/
+data-exports/
+
+# API keys stored in config files
+config/secrets.js
+config/keys.js
+config/production.js
+config/local.js
+
+# ========================================
+# DEPENDENCIES
+# ========================================
+
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+.pnpm-store/
 
-# Build outputs
+# ========================================
+# BUILD OUTPUTS
+# ========================================
+
 build/
 dist/
 out/
 .next/
-
-# Cache directories
+.turbo/
+.nuxt/
+.output/
 .cache/
+
+# ========================================
+# CACHE & TEMPORARY FILES
+# ========================================
+
 .tmp/
 .temp/
+tmp/
+temp/
+*.tmp
+*.temp
+.eslintcache
+.stylelintcache
 
-# IDE and editor files
+# ========================================
+# IDE AND EDITOR FILES
+# ========================================
+
+# VS Code
 .vscode/
+!.vscode/extensions.json
+!.vscode/settings.json.example
+
+# JetBrains IDEs
 .idea/
+*.iml
+*.iws
+*.ipr
+
+# Vim
 *.swp
 *.swo
 *~
+.*.sw[a-z]
 
-# OS generated files
+# Emacs
+*~
+\#*\#
+.\#*
+
+# Sublime Text
+*.sublime-workspace
+*.sublime-project
+
+# ========================================
+# OS GENERATED FILES
+# ========================================
+
+# macOS
 .DS_Store
 .DS_Store?
 ._*
+.AppleDouble
+.LSOverride
 .Spotlight-V100
 .Trashes
-ehthumbs.db
-Thumbs.db
+Icon
 
-# Logs
-logs
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+.directory
+.Trash-*
+
+# ========================================
+# LOGS
+# ========================================
+
+logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
+# ========================================
+# TESTING
+# ========================================
+
+# Coverage
 coverage/
+.nyc_output/
 *.lcov
+.coverage
+htmlcov/
+.pytest_cache/
 
-# Package manager lock files (uncomment if needed)
-# package-lock.json
-# yarn.lock
+# Test results
+test-results/
+junit.xml
+test-report.html
 
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
+# ========================================
+# DEPLOYMENT
+# ========================================
 
 # Vercel
-.vercel 
+.vercel
+.vercel.json
+
+# Netlify
+.netlify/
+
+# Docker
+docker-compose.override.yml
+.dockerignore
+
+# Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+
+# ========================================
+# TYPESCRIPT
+# ========================================
+
+*.tsbuildinfo
+next-env.d.ts
+*.d.ts.map
+
+# ========================================
+# SECURITY & AUDIT
+# ========================================
+
+# Security scan results
+security-audit.json
+vulnerability-report.json
+snyk-report.json
+
+# Penetration testing results
+pentest-results/
+security-findings/
+
+# ========================================
+# ANALYTICS & MONITORING
+# ========================================
+
+# Sentry
+.sentryclirc
+
+# Analytics exports
+analytics-export/
+metrics-dump/
+
+# ========================================
+# PACKAGE MANAGER LOCK FILES
+# ========================================
+# Uncomment if you want to ignore lock files
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# ========================================
+# PERSONAL NOTES & TODOS
+# ========================================
+
+# Personal notes (not project documentation)
+notes.md
+TODO.md
+PERSONAL.md
+scratch/
+scratchpad/
+
+# ========================================
+# MISCELLANEOUS
+# ========================================
+
+# Storybook
+storybook-static/
+
+# Generated files
+generated/
+auto-generated/
+
+# Large files that shouldn't be in git
+*.zip
+*.tar
+*.tar.gz
+*.rar
+*.7z
+
+# Video and audio (too large for git)
+*.mp4
+*.mov
+*.avi
+*.mp3
+*.wav 
